fix email overflow

--- a/client/styles/site.css
+++ b/client/styles/site.css
@@ -607,3 +607,12 @@ svg.line-chart {
 .costs .result-text{
   min-width: 7em;
 }
+
+.hyphenate {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
+}
